# cli_calc

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
src/calc/: __main__.py  cli.py  operation.py
tests/: test_cli.py  test_operations.py
