[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Henrique Andrade <henrique.ccda@gmail.com>"]
readme = "README.md"
packages = [{include = "calc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.270"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "test",
]

[tool.black]
line-length = 120
exclude = '''
/(
      \.eggs
    | \.git
    | \.venv
)/
'''

[tool.ruff]
line-length = 120

select = [
    "E",
    "F",
    "I",
]

exclude = [
    ".venv"
]

[tool.roof.isort]
profile = "black"
multi_line_output = 3
